--- a/Gumbo/Gumbo/Gumbo.csproj
+++ b/Gumbo/Gumbo/Gumbo.csproj
@@ -41,7 +41,7 @@
     <Compile Include="GumboParser.h.cs" />
     <Compile Include="GumboTag.cs" />
     <Compile Include="GumboToken.cs" />
-    <Compile Include="InsertionMode.cs" />
+    <Compile Include="InsertionMode.h.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tokenizer.c.cs" />
   </ItemGroup>
