--- a/Gumbo/Gumbo/Gumbo.csproj
+++ b/Gumbo/Gumbo/Gumbo.csproj
@@ -44,6 +44,7 @@
     <Compile Include="InsertionMode.h.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tokenizer.c.cs" />
+    <Compile Include="TokenType.h.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
