--- a/Gumbo/Gumbo/Gumbo.csproj
+++ b/Gumbo/Gumbo/Gumbo.csproj
@@ -41,9 +41,11 @@
     <Compile Include="GumboParser.h.cs" />
     <Compile Include="GumboTag.cs" />
     <Compile Include="GumboToken.cs" />
+    <Compile Include="GumboTokenStream.cs" />
     <Compile Include="InsertionMode.h.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tokenizer.c.cs" />
+    <Compile Include="TokenizerStates.h.cs" />
     <Compile Include="TokenType.h.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
